# ZackGPT

./: .coverage  .dockerignore  .editorconfig  .gitignore  Dockerfile  MANIFEST.in  README.md  README.txt  README_WEB_SETUP.md  WEB_SEARCH_SETUP.md  config.py  config_profiles.py  docker-compose.yml  pyproject.toml  quick_setup.py  requirements.txt  run_tests.py  test_intelligence_direct.py  test_notification.html  test_websocket.py  zackgpt.sh  zackgpt_ui.sh  zackgpt_web.sh
.archive/: memory_database.py
.archive/memories/: 3b175345-0474-4777-8176-28d3ef51547d.json  769f9c88-8049-4ea0-893b-0bbb78e2bd34.json  dfed82cb-f98b-4c21-a07b-f1ae8c9524fe.json  e05b7133-f440-4a83-896e-1246fe3b3518.json
.backups/data_backup_20250611_050939/: zackgpt.db
app/: action_router.py  config_profiles.py  context_engine.py  core_assistant.py  debug_logger.py  local_llm.py  logger.py  memory_database.py  memory_db.py  memory_engine.py  perplexity_search.py  prompt_builder.py  prompt_enhancer.py  prompt_loader.py  prompt_utils.py  query_handler.py  query_utils.py  simple_config_api.py  vector_memory.py  web_api.py  web_search.py
backups/: database_backup_20250626_011109.json  evolution_backup_20250626_011109.json
cli/: __init__.py  main.py
cli/commands/: __init__.py  chat.py  dev.py  voice.py
cli/utils/: __init__.py  output.py
config/: PROMPT_EVOLUTION_README.md  __init__.py  config.py  config_profiles.py  dynamic_memory_config.py  lightweight_mode.py  performance_toggles.py  prompt_components.json  startup.yaml
config/memory_profiles/: balanced.json  development.json  performance.json  quality.json
config/prompt_evolution/: evolution_data.json
deprecated/core/: intelligence_amplifier.py  llm_memory_manager.py  prompt_enhancer.py
devtools/: query_assistant.py  voice_assistant.py
docs/: DYNAMIC_MEMORY_SYSTEM.md  INTELLIGENCE_SYSTEM_EXPLAINED.md  PERSISTENT_CONTEXT_IMPLEMENTATION.md  STARTUP_REORGANIZATION_COMPLETE.md  STARTUP_REORGANIZATION_PLAN.md  TEST_PROGRESS.md  TEST_SUITE_PLAN.md  memory_graph_testing_summary.md
frontend/: README.md  package-lock.json  package.json  test-cors.html  test-delete.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: MemoryDetailView.css  MemoryDetailView.tsx  MemoryEditForm.css  MemoryEditForm.tsx  MemoryGraph.css  MemoryGraph.tsx  MemoryNotification.css  MemoryNotification.tsx  Settings.css  Settings.tsx
frontend/src/utils/: memoryGraphLogger.ts
launcher/: __init__.py  main.py  process_manager.py
llm/: context_engine.py  local_llm.py  prompt_builder.py  query_assistant.py
memories/: 0ccc912a-1735-4cc0-8035-58903d73d47b.json  c3cedff2-eeea-4b51-bb6f-af46469b5309.json  db7c203a-7b29-435a-bddf-36a2c91d3c2d.json
prompts/: core_assistant.txt
scripts/: DEPRECATED_NOTICE.md  README_RESET_TOOLS.md  cleanup_test_data.py  quick_reset.sh  reset_system.py  start_lightweight.sh  test_memory_graph.py  test_memory_notifications.py  test_openai_config.py
scripts/dev/: log_analyzer.py
scripts/launcher/: zackgpt.sh  zackgpt_text.sh  zackgpt_ui.sh  zackgpt_web.sh
scripts/ops/: soundtest.py  voice_assistant.py  watch_main.py  zackgpt-cli.sh
scripts/startup/: dev.py  main.py  main_text.py  main_voice.py  main_web.py  watch_main.py
scripts/tools/: reboot.sh  run_voice_loop.py
server/: __init__.py  main.py
server/scripts/: start-server.sh
src/: __init__.py  index.html
src/app/: app.html
src/zackgpt/: __init__.py  _version.py
src/zackgpt/archive/: __init__.py  prompt_utils.py
src/zackgpt/cli/: chat.py  dev.py  voice.py
src/zackgpt/core/: __init__.py  action_router.py  context_engine.py  core_assistant.py  database.py  dynamic_memory_engine.py  intelligence_amplifier.py  local_llm.py  local_router.py  logger.py  memory_db.py  web_search.py  (+7 more)
tests/: conftest.py  pytest.ini  requirements.txt  run_tests.py  test_database.py  test_runner.py
tests/backend/: test_logger.py  test_memory_graph_logging.py  test_performance.py
tests/core/: test_intelligence_amplifier.py
tests/integration/: test_intelligence_integration.py
tests/performance/: test_memory_stress.py
tests/results/: memory_stress_test_results.json  test_summary.json
tests/unit/: test_logger.py  test_performance.py
ui/: BACKEND_API_REQUIREMENTS.md  README.md
ui/zackgpt-ui/: README.md  angular.json  package-lock.json  package.json
voice/: elevenlabs.py  tts_mac.py  whisper_listener.py
(+54 files in other folders)
